RESOLVED FIXED15320
WebArchives do not embed css stylesheets referenced by xml-stylesheeet
https://bugs.webkit.org/show_bug.cgi?id=15320
Summary WebArchives do not embed css stylesheets referenced by xml-stylesheeet
Eric Seidel (no email)
Reported 2007-09-29 07:29:13 PDT
WebArchives do not embed stylesheets referenced by xml-stylesheeet I'm not sure that ProcessingInstructions ever end up in the DOM, which would be the only way (it seems) that the current web archiver would be able to access the xml-stylesheet href information.
Attachments
the fix (5.15 KB, patch)
2007-09-29 07:58 PDT, Eric Seidel (no email)
oliver: review+
Eric Seidel (no email)
Comment 1 2007-09-29 07:58:21 PDT
Created attachment 16450 [details] the fix This patch is made against feature-branch, but it just as easily could apply to trunk (except due to layout test locations)
Alexey Proskuryakov
Comment 2 2007-09-29 08:13:39 PDT
Comment on attachment 16450 [details] the fix r=me (but please remove the nil check for styleSheet). Eric says that he's going to look into what happens to XSL stylesheets in such situation.
Eric Seidel (no email)
Comment 3 2007-09-29 08:26:16 PDT
Landed on feature-branch as r25805.
Oliver Hunt
Comment 4 2007-10-01 19:16:03 PDT
This patch was skipped in the feature branch rebasing and will need to be updated
Eric Seidel (no email)
Comment 5 2007-10-01 22:37:23 PDT
Relanded same patch as r25907.
Note You need to log in before you can comment on or make changes to this bug.