2007-09-29  Eric Seidel  <eric@webkit.org>

Reviewed by Alexey Proskuryakov.
        
        WebArchives do not embed stylesheets referenced by xml-stylesheeet
        http://bugs.webkit.org/show_bug.cgi?id=15320

        * DOM/WebDOMOperations.mm:
        (-[DOMProcessingInstruction _stylesheetURL]): needed to access [[self sheet] href]
        (-[DOMProcessingInstruction _subresourceURLs]): call and return _stylesheetURL


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@25805 268f45cc-cd09-0410-ab3c-d52691b4dbfc